test/Common/LinkerScriptParsing/Errors/Sections/IncludeErrorInMainScript/Inputs/newinclude.t
lib11.a:11.o (.text.*main)
